force-app/main/default/objects/Opportunity/fields/First_Date_Of_6_Prototypes__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Of_6_Prototypes__c</fullName>
    <label>First Date Of 6 Prototypes</label>
    <type>Date</type>
</CustomField>