force-app/main/default/objects/Opportunity/fields/First_Date_Of_7_Pre_Production__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Of_7_Pre_Production__c</fullName>
    <label>First Date Of 7 Pre-Production</label>
    <type>Date</type>
</CustomField>