force-app/main/default/objects/Opportunity/fields/First_Date_Of_8_Production__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Of_8_Production__c</fullName>
    <label>First Date Of 8 Production</label>
    <type>Date</type>
</CustomField>