force-app/main/default/objects/Opportunity/fields/First_Date_Of_9_Closed_EoL__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Of_9_Closed_EoL__c</fullName>
    <label>First Date Of 9 Closed - EoL</label>
    <type>Date</type>
</CustomField>