force-app/main/default/objects/Opportunity/fields/Focus__c.field-meta.xml
<CustomField>
    <fullName>Focus__c</fullName>
    <inlineHelpText>+ Focus-1 Attention from EC. &gt;  500k CHF contribution, requires direct coverage and special FAE/RAE/AE support. 
+ Focus-2 Special attention by regional sales heads or country managers. &gt; 250k CHF contribution.
+ Focus-3 Any opportunity which is important for region and will have direct u-blox resources assigned (A, B or C account). 
+ Focus-4 Distributor opportunity which can be supported Disti FAE
+ Focus-5 no direct u-blox support. Supported through Portal or channel partner</inlineHelpText>
    <label>Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Corporate</fullName>
            </value>
            <value>
                <fullName>2 - Region</fullName>
            </value>
            <value>
                <fullName>3 - Territory</fullName>
            </value>
            <value>
                <fullName>4 - Area</fullName>
            </value>
            <value>
                <fullName>5 - Portal</fullName>
                <default>true</default>
                <label>5 - Portal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>