force-app/main/default/objects/Opportunity/fields/Gain_Creators__c.field-meta.xml
<CustomField>
    <fullName>Gain_Creators__c</fullName>
    <description>Added on request OpenIssues52917</description>
    <inlineHelpText>What new or additional benefits does our solution offer?</inlineHelpText>
    <label>Gain Creators</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>