force-app/main/default/objects/Opportunity/fields/Gains__c.field-meta.xml
<CustomField>
    <fullName>Gains__c</fullName>
    <description>Added on request OpenIssues52917</description>
    <inlineHelpText>Describe the desired outcome and benefits when job is done correctly
[Required, expected, desired, unexpected]</inlineHelpText>
    <label>Gains</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>