force-app/main/default/objects/Opportunity/fields/Has_PDF_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Has_PDF_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated with Apex Trigger &quot;AttachmentTrigger&quot;</description>
    <inlineHelpText>Checked if there is a PDF Attachment. Automatically updated.</inlineHelpText>
    <label>Has PDF Attachments</label>
    <type>Checkbox</type>
</CustomField>