force-app/main/default/objects/Opportunity/fields/Info_Lead_Qualification_del__c.field-meta.xml
<CustomField>
    <fullName>Info_Lead_Qualification_del__c</fullName>
    <description>In order to make the field editable, the data from the lead conversion (stored in fields Lead_....) is copied into this field after the Opportunity is created. Use of Workflow.</description>
    <inlineHelpText>Initial information copied from project qualification via web interface. May not be up-to-date.</inlineHelpText>
    <label>Info Lead Qualification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>