force-app/main/default/objects/Opportunity/fields/Latest_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Status__c</fullName>
    <inlineHelpText>Status of project</inlineHelpText>
    <label>Latest Status</label>
    <type>TextArea</type>
</CustomField>