force-app/main/default/objects/Opportunity/fields/Latest_Status_Modified__c.field-meta.xml
<CustomField>
    <fullName>Latest_Status_Modified__c</fullName>
    <inlineHelpText>Date at which the field &quot;Latest Status&quot; was changed for the last time.</inlineHelpText>
    <label>Latest Status Modified</label>
    <type>Date</type>
</CustomField>