force-app/main/default/objects/Opportunity/fields/Latest_Status_Technical__c.field-meta.xml
<CustomField>
    <fullName>Latest_Status_Technical__c</fullName>
    <description>Status in technical aspect, to be filled by FAE or TM</description>
    <inlineHelpText>Status in technical aspect, to be filled by FAE or TM</inlineHelpText>
    <label>Latest Status Technical</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>