force-app/main/default/objects/Opportunity/fields/Latest_Status_Technical_Modified__c.field-meta.xml
<CustomField>
    <fullName>Latest_Status_Technical_Modified__c</fullName>
    <description>Date when Latest Status Technical field has been modified.</description>
    <inlineHelpText>Date when Latest Status Technical field has been modified.</inlineHelpText>
    <label>Latest Status Technical Modified</label>
    <type>Date</type>
</CustomField>