force-app/main/default/objects/Opportunity/fields/Lead_CM__c.field-meta.xml
<CustomField>
    <fullName>Lead_CM__c</fullName>
    <inlineHelpText>From Lead</inlineHelpText>
    <label>Lead CM</label>
    <length>40</length>
    <type>Text</type>
</CustomField>