force-app/main/default/objects/Opportunity/fields/Lead_CM_Country__c.field-meta.xml
<CustomField>
    <fullName>Lead_CM_Country__c</fullName>
    <label>Lead CM Country</label>
    <length>12</length>
    <type>Text</type>
</CustomField>