force-app/main/default/objects/Opportunity/fields/Lead_Current_GPS_Qty__c.field-meta.xml
<CustomField>
    <fullName>Lead_Current_GPS_Qty__c</fullName>
    <inlineHelpText>From lead conversion</inlineHelpText>
    <label>Lead Current GPS Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>