force-app/main/default/objects/Opportunity/fields/Lead_Current_GPS_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Lead_Current_GPS_Supplier__c</fullName>
    <inlineHelpText>From lead conversion</inlineHelpText>
    <label>Lead Current GPS Supplier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>