force-app/main/default/objects/Opportunity/fields/Lead_Current_Qty__c.field-meta.xml
<CustomField>
    <fullName>Lead_Current_Qty__c</fullName>
    <description>Copied from Lead: Current Qty</description>
    <label>Lead Current Qty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>