force-app/main/default/objects/Opportunity/fields/Lead_Current_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Lead_Current_Suppliers__c</fullName>
    <description>Copied from Lead: Current Suppliers</description>
    <label>Lead Current Suppliers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>