force-app/main/default/objects/Opportunity/fields/Lead_Current_Wireless_Qty__c.field-meta.xml
<CustomField>
    <fullName>Lead_Current_Wireless_Qty__c</fullName>
    <inlineHelpText>From Lead conversion</inlineHelpText>
    <label>Lead Current Wireless Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>