force-app/main/default/objects/Opportunity/fields/Lead_Design_House__c.field-meta.xml
<CustomField>
    <fullName>Lead_Design_House__c</fullName>
    <inlineHelpText>From Lead</inlineHelpText>
    <label>Lead Design House</label>
    <length>40</length>
    <type>Text</type>
</CustomField>