force-app/main/default/objects/Opportunity/fields/Lead_Design_House_Country__c.field-meta.xml
<CustomField>
    <fullName>Lead_Design_House_Country__c</fullName>
    <label>Lead Design House Country</label>
    <length>121</length>
    <type>Text</type>
</CustomField>