force-app/main/default/objects/Opportunity/fields/Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email__c</fullName>
    <label>Requestor Lead Email</label>
    <type>Email</type>
</CustomField>