force-app/main/default/objects/Opportunity/fields/Lead_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>Lead_End_Customer__c</fullName>
    <inlineHelpText>From Lead</inlineHelpText>
    <label>Lead End Customer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>