force-app/main/default/objects/Opportunity/fields/Lead_End_Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>Lead_End_Customer_Country__c</fullName>
    <label>Lead End Customer Country</label>
    <length>12</length>
    <type>Text</type>
</CustomField>