force-app/main/default/objects/Opportunity/fields/Lead_GPS_Product__c.field-meta.xml
<CustomField>
    <fullName>Lead_GPS_Product__c</fullName>
    <inlineHelpText>GPS product information from Lead</inlineHelpText>
    <label>Lead GPS Product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>