force-app/main/default/objects/Opportunity/fields/Lead_Planned_Qty__c.field-meta.xml
<CustomField>
    <fullName>Lead_Planned_Qty__c</fullName>
    <inlineHelpText>From Lead conversion.</inlineHelpText>
    <label>Lead Planned Qty</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>