force-app/main/default/objects/Opportunity/fields/Lead_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Production_Date__c</fullName>
    <inlineHelpText>From Lead conversion</inlineHelpText>
    <label>Lead Production Date</label>
    <type>Date</type>
</CustomField>