force-app/main/default/objects/Opportunity/fields/Lead_Products_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Lead_Products_Of_Interest__c</fullName>
    <description>Copied from Lead: Products Of Interest</description>
    <label>Lead Products Of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>