force-app/main/default/objects/Opportunity/fields/Lead_Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Project_Description__c</fullName>
    <inlineHelpText>Information from Lead conversion.</inlineHelpText>
    <label>Lead Project Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>