force-app/main/default/objects/Opportunity/fields/Lead_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Project_Name__c</fullName>
    <description>Project Name given in the Lead (Project Information Form field), to be used for Opportunity Name on Lead conversion</description>
    <inlineHelpText>Project Name given in the Lead (Project Information Form field), to be used for Opportunity Name on Lead conversion</inlineHelpText>
    <label>Lead Project Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>