force-app/main/default/objects/Opportunity/fields/Lead_Proto_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Proto_Date__c</fullName>
    <inlineHelpText>From conversion of Lead. Copied to Proto date.</inlineHelpText>
    <label>Lead Proto Date</label>
    <type>Date</type>
</CustomField>