force-app/main/default/objects/Opportunity/fields/Lead_Request__c.field-meta.xml
<CustomField>
    <fullName>Lead_Request__c</fullName>
    <inlineHelpText>Request from project web form</inlineHelpText>
    <label>Lead Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>