force-app/main/default/objects/Opportunity/fields/Lead_Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From Lead</inlineHelpText>
    <label>Lead Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Lead Source Account)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>