force-app/main/default/objects/Opportunity/fields/Lead_Source_Person__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>From Lead if the Opportunity has been created through Lead conversion</description>
    <inlineHelpText>From Lead if the Opportunity has been created through Lead conversion</inlineHelpText>
    <label>Lead Source Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>