force-app/main/default/objects/Opportunity/fields/Lead_Source_Person_User__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Person_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From Lead</inlineHelpText>
    <label>Lead Source Person (User)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard,PowerPartner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>