force-app/main/default/objects/Opportunity/fields/Lead_Source_Webform__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Webform__c</fullName>
    <description>Webform from that the Lead has been generated</description>
    <inlineHelpText>Webform from that the Lead has been generated</inlineHelpText>
    <label>Lead Source Webform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source_Webform</valueSetName>
    </valueSet>
</CustomField>