force-app/main/default/objects/Opportunity/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <inlineHelpText>Stage submitted with project form</inlineHelpText>
    <label>Lead Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>