force-app/main/default/objects/Opportunity/fields/Lead_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Submit_Date__c</fullName>
    <inlineHelpText>Date when project form has been submitted</inlineHelpText>
    <label>Lead Submit Date</label>
    <type>Date</type>
</CustomField>