force-app/main/default/objects/Opportunity/fields/Lead_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Lead_Submitter__c</fullName>
    <inlineHelpText>Project information submitted by</inlineHelpText>
    <label>Lead Submitter</label>
    <length>40</length>
    <type>Text</type>
</CustomField>