force-app/main/default/objects/Opportunity/fields/Lead_uB_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_uB_Contact__c</fullName>
    <inlineHelpText>Person at u-blox who sent the link</inlineHelpText>
    <label>Lead uB Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>