force-app/main/default/objects/Opportunity/fields/Lead_Wireless_ASP__c.field-meta.xml
<CustomField>
    <fullName>Lead_Wireless_ASP__c</fullName>
    <inlineHelpText>From Lead</inlineHelpText>
    <label>Lead Wireless ASP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>