force-app/main/default/objects/Opportunity/fields/Market_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Market_Cluster__c</fullName>
    <label>Market Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Market_Cluster</valueSetName>
    </valueSet>
</CustomField>