force-app/main/default/objects/Opportunity/fields/Market_Success__c.field-meta.xml
<CustomField>
    <fullName>Market_Success__c</fullName>
    <inlineHelpText>Confidence level in projected volume, regardless if the socket is won by u-blox or by a competitor.</inlineHelpText>
    <label>DO NOT USE Market Success</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% Order Visible</fullName>
            </value>
            <value>
                <fullName>70% Postitive Outlook</fullName>
            </value>
            <value>
                <fullName>10% Uncertain</fullName>
                <default>true</default>
                <label>10% Uncertain</label>
            </value>
            <value>
                <fullName>1% Unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>