force-app/main/default/objects/Opportunity/fields/NeedToSendOppReminder__c.field-meta.xml
<CustomField>
    <fullName>NeedToSendOppReminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to identify the opps which we select to send them reminders.</description>
    <label>Need to send opportunity reminder</label>
    <type>Checkbox</type>
</CustomField>