force-app/main/default/objects/Opportunity/fields/Number_of_attached_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_attached_Products__c</fullName>
    <label>Number of attached Products</label>
    <summaryForeignKey>Opp_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>