force-app/main/default/objects/Opportunity/fields/Opp_Contribution_Unweighted__c.field-meta.xml
<CustomField>
    <fullName>Opp_Contribution_Unweighted__c</fullName>
    <description>Roll-up summary of &quot;Contribution With Status Factor&quot; (0 if Status is Alternative Product, Lost, Not Applicable) of all added Opp Products, not weighted with Probability</description>
    <inlineHelpText>Roll-up summary of &quot;Contribution With Status Factor&quot; (0 if Status is Alternative Product, Lost, Not Applicable) of all added Opp Products, not weighted with Probability</inlineHelpText>
    <label>Opp Contribution Unweighted</label>
    <summarizedField>Opp_Product__c.Contribution_With_Status_Factor__c</summarizedField>
    <summaryForeignKey>Opp_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>