force-app/main/default/objects/Opportunity/fields/Opp_Total_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Opp_Total_Contribution__c</fullName>
    <description>Sum of Contribution of all added Opp Products, weighted by Probability</description>
    <formula>Opp_Contribution_Unweighted__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Contribution of all added Opp Products, weighted by Probability</inlineHelpText>
    <label>Opp Total Contribution</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>