force-app/main/default/objects/Opportunity/fields/Opp_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opp_Total_Revenue__c</fullName>
    <formula>Opp_Revenue_Without_Probability__c  * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Revenues of all added Opp Products, weighted by Probability</inlineHelpText>
    <label>Opp Total Revenue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>