force-app/main/default/objects/Opportunity/fields/Opp_Total_Revenue_CHF__c.field-meta.xml
<CustomField>
    <fullName>Opp_Total_Revenue_CHF__c</fullName>
    <description>Opp Total Revenue in CHF, converted in exchange rate set in User object</description>
    <formula>CASE(TEXT(CurrencyIsoCode),
&quot;EUR&quot;, Opp_Total_Revenue__c*$User.EURtoCHF__c,
&quot;JPY&quot;, Opp_Total_Revenue__c*$User.JPYtoCHF__c,
&quot;USD&quot;, Opp_Total_Revenue__c*$User.USDtoCHF__c,
Opp_Total_Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opp Total Revenue in CHF, converted in exchange rate set in User object</inlineHelpText>
    <label>Opp Total Revenue	 CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>