force-app/main/default/objects/Opportunity/fields/OppAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>OppAutoNumber__c</fullName>
    <description>To be used for Quotation_Reference_Number__c</description>
    <displayFormat>{YY}{000000}</displayFormat>
    <label>OppAutoNumber</label>
    <type>AutoNumber</type>
</CustomField>