force-app/main/default/objects/Opportunity/fields/Opportunity_Account__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to create related list that only shows quotation or opportunity. If the record type is quotation, than it is blank.</description>
    <label>Opportunity Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>