force-app/main/default/objects/Opportunity/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <description>This field has the date on which the opportunity will be closed automatically. The reason could be inactivity or something else.</description>
    <inlineHelpText>Closing Date</inlineHelpText>
    <label>Auto-Close Date</label>
    <type>Date</type>
</CustomField>