force-app/main/default/objects/Opportunity/fields/Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Probability__c</fullName>
    <label>Opportunity Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>