force-app/main/default/objects/Opportunity/fields/Other_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Other_Use_Case__c</fullName>
    <inlineHelpText>Fill this field if the use case can&apos;t be found in the picklist above. &apos;Other&apos; value needs to be selected in the Use case picklist.</inlineHelpText>
    <label>Other Use Case</label>
    <length>20</length>
    <type>Text</type>
</CustomField>