force-app/main/default/objects/Opportunity/fields/Owner_CEL__c.field-meta.xml
<CustomField>
    <fullName>Owner_CEL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsible from PS-CEL for this Strategic Business Opportunity</description>
    <inlineHelpText>Responsible from PS-CEL for this Strategic Business Opportunity</inlineHelpText>
    <label>Owner CEL</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard,PowerPartner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesCEL</relationshipName>
    <type>Lookup</type>
</CustomField>